# nail-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_studio_profile_website.py  0003_google_calendar.py
app/: agent_service.py  agent_tools.py  anthropic_client.py  config.py  cost_tracker.py  cron.py  db.py  event_router.py  google_calendar.py  line_client.py  main.py  models.py  notifications.py  portfolio_carousel.py  rate_limiter.py  replies.py  scheduler.py  services_carousel.py  slots.py  webhook.py
app/admin/: appointments.py  auth.py  google_calendar.py  portfolio.py  schedule.py  schemas.py  services.py  studio.py
app/api/: appointments.py  portfolio.py  schemas.py  (+1 more)
docs/: deploy-checklist.md  rich-menu-update.md
scripts/: seed_services.py  setup_rich_menu.py  update_service_images.py
tests/: conftest.py  test_admin_appointments.py  test_admin_auth.py  test_admin_google_calendar.py  test_admin_portfolio.py  test_admin_schedule.py  test_admin_services.py  test_admin_studio.py  test_admin_ui.py  test_agent_service.py  test_agent_service_tools.py  test_agent_tools.py  test_anthropic_client_tools.py  test_api_appointments.py  test_api_portfolio.py  test_api_services.py  test_cron_reminders.py  test_cron_summary.py  test_event_router.py  test_event_router_services.py  test_google_calendar.py  test_liff_ui.py  test_line_client.py  test_notifications.py  test_portfolio_carousel.py  test_scheduler_lifespan.py  test_services_carousel.py  test_slots.py  test_webhook.py
(+29 files in other folders)
